--- a/app/components/Home.css
+++ b/app/components/Home.css
@@ -1,8 +1,4 @@
 .container {
-  position: absolute;
-  top: 30%;
-  left: 10px;
-  text-align: center;
 }
 
 .container h2 {
@@ -11,4 +7,17 @@
 
 .container a {
   font-size: 1.4rem;
+}
+
+.value-input {
+  font-size: 16px;
+  height: 20px;
+}
+
+.mb10 {
+  margin-bottom: 10px;
+}
+
+.result-btn {
+  font-size: 18px;
 }
